--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,17 @@
 }
 /* ---------------------------START FONTS--------------------------- */
 .libre-franklin {
-  font-family: "Libre Franklin", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 700;
-  font-style: normal;
+    font-family: "Libre Franklin", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
 }
 
 .playfair-display-500 {
-  font-family: "Playfair Display", serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
 }
 /* ---------------------------END FONTS--------------------------- */
 /* ---------------------------START HEADER SECTION STYLE--------------------------- */
@@ -73,7 +73,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-
+    height: 50px;
 }
 .bottom-content .content{
     margin: 10px;
@@ -115,6 +115,13 @@ header{
     width: 68%;
     margin-left: auto;
 }
+.papers{
+    text-align: center;
+    padding: 20px;
+}
+.papers p{
+    padding: 5px;
+}
 .image-section{
     display: flex;
     justify-content: space-around;
@@ -134,6 +141,7 @@ header{
     justify-content: space-around;
     padding: 10px 0 10px 0;
 }
+/* ---------------------------END MAIN SECTION STYLE--------------------------- */
 /* ---------------------------START TABLE SECTION STYLE--------------------------- */
 .table{
     display: flex;
@@ -154,7 +162,6 @@ header{
     margin-bottom: 5px;
 }
 /* ---------------------------END TABLE SECTION STYLE--------------------------- */
-/* ---------------------------END MAIN SECTION STYLE--------------------------- */
 /* ---------------------------START BOTTOM SECTION STYLE--------------------------- */
 .bottom{
     width: 100%;
